--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,11 +15,9 @@
 
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: grid;
-  grid-template-rows: 100px 1fr auto;
 }
 
 a {
