--- a/src/app/styles/contact.module.css
+++ b/src/app/styles/contact.module.css
@@ -10,7 +10,6 @@
 .body {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 40rem;
   gap: 3.75rem;
 }
 .contact_form {
@@ -20,8 +19,87 @@
 .form {
   border-radius: 8px;
   border: 1px hsla(215, 48%, 90%, 1);
-  gap: 24px;
+  padding: 2rem;
   box-shadow: 0 0 21px hsla(206, 37%, 43%, 0.1);
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.form h3 {
+  font-family: Urbanist;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0em;
+  text-align: center;
+  color: hsla(0, 0%, 0%, 1);
+}
+
+.form button {
+  background: var(--button-background);
+  color: var(--white);
+  height: 48px;
+  padding: 16px;
+  border-radius: 8px;
+  gap: 10px;
+  border: none;
+}
+
+.form textarea {
+  width: 100%;
+  height: 162px;
+  padding: 16px;
+  border-radius: 8px;
+  border: 1px solid hsla(215, 48%, 90%, 1);
+  gap: 8px;
+  background: hsla(0, 0%, 99%, 1);
+  outline: none;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: hsla(0, 0%, 44%, 1);
+}
+
+.form input {
+  width: 100%;
+  height: 60px;
+  outline: none;
+  border-radius: 8px;
+  border: 1px solid hsla(215, 48%, 90%, 1);
+  background: hsla(0, 0%, 99%, 1);
+  padding: 16px;
+  gap: 8px;
+  font-family: Urbanist;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: hsla(0, 0%, 44%, 1);
+}
+
+.form label {
+  font-family: Urbanist;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: hsla(0, 0%, 0%, 1);
+}
+
+.infos {
+  display: flex;
+  flex-direction: row;
+  gap: 3rem;
+  padding: 2rem;
+}
+
+.info_card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.75rem;
 }
