--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -1,36 +1,62 @@
 .header {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 1fr 3fr 2fr;
+  height: 6rem;
   align-items: center;
-  padding: 3rem;
+  padding: 0 3rem;
 }
 
-.header div:nth-child(2) {
+.header > div:nth-child(2) {
   display: flex;
-  justify-content: space-between;
+  gap: 2rem;
+  justify-self: center;
+}
+.header > div:nth-child(3) div {
+  display: flex;
   align-items: center;
 }
 
-.button {
+.header > div:nth-child(3) {
   display: flex;
-  background: var(--button-background);
+  gap: 2rem;
+  align-items: center;
+  justify-self: center;
+}
+
+.header a {
+  font-family: Urbanist;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  font: hsla(0, 0%, 0%, 1);
+}
+
+.header button {
+  display: flex;
   width: 131px;
   height: 48px;
-  padding: 12px 16px;
+  padding: 16x;
   border-radius: 8px;
   gap: 10px;
+  background: var(--button-background);
   color: var(--white);
+  font-family: Urbanist;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0em;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   cursor: pointer;
   border: none;
 }
-
-.header *:not(button) {
+.header span {
   font-family: Urbanist;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 24px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 28px;
   letter-spacing: 0em;
   text-align: left;
 }
