--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -2,7 +2,12 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 5rem;
-  height: 400px;
+  height: 450px;
+}
+.cards > div:has(form) {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 .cards span {
   background: linear-gradient(
@@ -49,12 +54,23 @@
   line-height: 20px;
   letter-spacing: 0em;
   text-align: left;
+  color: hsla(0, 0%, 25%, 1);
 }
 .cards input {
+  width: 282px;
   height: 52px;
   padding: 16px;
   border-radius: 10px;
-  justify-content: space-between;
+  border: 1px solid hsla(0, 0%, 90%, 1);
+  outline: none;
+  font-family: Urbanist;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: hsla(0, 0%, 25%, 1);
+  background: hsla(0, 0%, 97%, 1);
 }
 .cards button {
   background: var(--button-background);
@@ -69,6 +85,12 @@
   cursor: pointer;
   justify-content: center;
   align-items: center;
+  font-family: Urbanist;
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .lists {
