--- a/src/app/styles/accommodation.module.css
+++ b/src/app/styles/accommodation.module.css
@@ -25,8 +25,54 @@
   aspect-ratio: 1/1;
   border: 1px solid hsla(206, 37%, 43%, 0.1);
   box-shadow: 1px 1px 2px hsla(206, 37%, 43%, 0.1);
+  display: grid;
+}
+.card_body {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  gap: 0.75rem;
+  align-items: center;
+}
+.card h3 {
+  font-family: Urbanist;
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.875rem;
+  letter-spacing: 0em;
+  text-align: center;
 }
 
+.card h3 + div {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding: 1rem;
+  gap: 0.5rem;
+}
+.list {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  justify-content: center;
+}
+.card_body2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 2rem;
+}
+.list2 {
+  display: flex;
+  justify-content: space-between;
+}
+.list2_p {
+  font-family: Urbanist;
+  font-size: 1rem;
+  font-weight: 700;
+  line-height: 1.625rem;
+  letter-spacing: 0px;
+  text-align: right;
+  color: hsla(225, 51%, 29%, 1);
+}
 .header_text {
   background: var(--button-background);
   color: var(--white);
@@ -51,4 +97,41 @@
   letter-spacing: 0em;
   text-align: left;
   color: hsla(0, 0%, 0%, 1);
+}
+
+.card:nth-child(2) p {
+  font-family: Urbanist;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.625rem;
+  letter-spacing: 0px;
+  text-align: center;
+  color: hsla(0, 0%, 25%, 1);
+  padding: 2rem;
+}
+
+.spans {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.spans > span {
+  font-family: Urbanist;
+  font-size: 1rem;
+  font-weight: 600;
+  line-height: 1.625rem;
+  letter-spacing: 0px;
+  color: hsla(0, 0%, 25%, 1);
+}
+.spans > span + span {
+  font-family: Urbanist;
+  font-size: 0.875rem;
+  font-weight: 400;
+  line-height: 1.0625rem;
+  letter-spacing: 0em;
+}
+
+.card:nth-of-type(3) > div {
+  padding: 2rem;
 }
