--- a/src/app/styles/accommodation.module.css
+++ b/src/app/styles/accommodation.module.css
@@ -1,7 +1,6 @@
 .parent {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
+  display: grid;
+  gap: 2rem;
 }
 
 .main_heading {
@@ -18,7 +17,7 @@
 .cards {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 80px;
+  gap: 5rem;
 }
 
 .card {
@@ -83,12 +82,6 @@
   text-align: center;
 }
 
-.detail {
-  height: 769px;
-  display: grid;
-  grid-template-rows: 1fr 1fr 0.48fr;
-}
-
 .detail_header {
   font-family: Urbanist;
   font-size: 30px;
@@ -137,15 +130,18 @@
 }
 
 /* beneath cards detail style*/
-
-.detail div:nth-child(1),
-.detail div:nth-child(2) {
+.detail {
+  display: grid;
+  gap: 1.75rem;
+}
+.detail > div:nth-child(1),
+.detail > div:nth-child(2) {
   display: flex;
   flex-direction: column;
   gap: 2rem;
 }
 
-.detail div:nth-child(3) {
+.detail > div:nth-child(3) {
   display: flex;
   flex-direction: column;
   gap: 1.75rem;
@@ -160,7 +156,71 @@
   text-align: left;
   color: hsla(0, 0%, 25%, 1);
 }
+
 .floor_card {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  background: hsla(0, 0%, 98%, 1);
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
+}
+.floor_card img {
+  aspect-ratio: 1/1;
+  border: solid;
+}
+.detail_cards {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: 0.625rem;
+}
+
+.detail_cards button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 3rem;
+  width: 15rem;
+  background: var(--button-background);
+  color: var(--white);
+  padding: 1rem;
+  border-radius: 0.5rem;
+  border: none;
+  outline: none;
+}
+.detail_cards select {
+  width: 15rem;
+  height: 3rem;
+  outline: none;
+  border: 1px solid hsla(0, 0%, 0%, 0.52);
+  background: hsla(0, 0%, 100%, 1);
+  color: hsla(0, 0%, 0%, 0.52);
+}
+
+.detail_cards div {
+  display: flex;
+}
+
+.detail_cards span:nth-of-type(1) {
+  font-family: Urbanist;
+  font-size: 1.5625rem;
+  font-weight: 700;
+  line-height: 1.875rem;
+  letter-spacing: 0em;
+  color: hsla(225, 51%, 29%, 1);
+}
+
+.detail_cards span:nth-of-type(2) {
+  font-family: Urbanist;
+  font-size: 21px;
+  font-weight: 400;
+  line-height: 1.5625rem;
+  letter-spacing: 0em;
+  color: hsla(0, 0%, 0%, 1);
+}
+
+.line {
+  border: 2px solid hsla(0, 0%, 87%, 1);
+  width: 0;
+  height: 100%;
 }
