--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -35,20 +35,18 @@
 
 .header button {
   display: flex;
-  width: 131px;
-  height: 48px;
-  padding: 16x;
+  height: 3rem;
+  padding: 1rem;
   border-radius: 8px;
   gap: 10px;
   background: var(--button-background);
   color: var(--white);
   font-family: Urbanist;
-  font-size: 16px;
+  font-size: 1rem;
   font-weight: 700;
   line-height: 24px;
   letter-spacing: 0em;
   align-items: center;
-  justify-content: center;
   cursor: pointer;
   border: none;
 }
@@ -59,4 +57,55 @@
   line-height: 28px;
   letter-spacing: 0em;
   text-align: left;
+}
+
+.menu {
+  display: none;
+}
+.menu_open {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  background: var(--white);
+  gap: 4rem;
+  top: 15%;
+  left: 0;
+  width: 100%;
+  padding: 3rem;
+  text-align: left;
+  z-index: 1000;
+}
+
+.menu_open > div {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.menu_open select {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  background: hsla(0, 0%, 98%, 1);
+  height: 3.25rem;
+  outline: none;
+}
+.menu_open button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+/* display none when we come to tabs */
+@media only screen and (max-width: 768px) {
+  .header > div:nth-of-type(2),
+  .header > div:nth-of-type(3) {
+    display: none;
+  }
+  .header {
+    display: flex;
+    justify-content: space-between;
+  }
+  .menu {
+    display: block;
+    cursor: pointer;
+  }
 }
