--- a/src/app/styles/services.module.css
+++ b/src/app/styles/services.module.css
@@ -81,3 +81,13 @@
   color: transparent;
   display: inline-block;
 }
+
+@media only screen and (max-width: 768px) {
+  .body > div {
+    grid-template-columns: 1fr;
+  }
+  .body > div > img {
+    width: 100%;
+    height: auto;
+  }
+}
