--- a/src/app/styles/accommodation.module.css
+++ b/src/app/styles/accommodation.module.css
@@ -220,3 +220,52 @@
   width: 0;
   height: 100%;
 }
+
+@media only screen and (max-width: 768px) {
+  .cards {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+  }
+  .card:nth-child(3) {
+    grid-column: 1/3;
+  }
+  .line {
+    display: none;
+    width: 0;
+    height: 0;
+  }
+  .detail > div {
+    display: grid;
+    align-items: center;
+  }
+  .floor_card {
+    width: 100%;
+    grid-template-columns: 1fr;
+    gap: 0;
+    padding: 1rem;
+  }
+  .floor_card > *:nth-child(2),
+  .floor_card > *:nth-child(4),
+  .floor_card > *:nth-child(5) {
+    grid-row: 1;
+  }
+  .floor_card > *:nth-child(1) {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    height: auto;
+    grid-column: 1/4;
+    grid-row: 4;
+  }
+  .floor_card > *:nth-child(6) {
+    width: 100%;
+    grid-row: 5;
+    grid-column: 1/4;
+  }
+}
+/* for mobile stuff */
+@media only screen and (max-width: 600px) {
+  .cards {
+    grid-template-columns: 1fr;
+  }
+}
