--- a/src/app/styles/contact.module.css
+++ b/src/app/styles/contact.module.css
@@ -13,12 +13,18 @@
   grid-template-columns: repeat(2, 1fr);
   gap: 3.75rem;
 }
+.body iframe {
+  border: none;
+}
+.body *:nth-child(1) {
+  grid-row: 1/3;
+}
 .contact_form {
   display: grid;
   grid-template-rows: 4fr 1fr;
 }
 .form {
-  border-radius: 8px;
+  border-radius: 0.5rem;
   border: 1px hsla(215, 48%, 90%, 1);
   padding: 2rem;
   box-shadow: 0 0 21px hsla(206, 37%, 43%, 0.1);
@@ -107,4 +113,41 @@
 .flex {
   display: flex;
   gap: 0.5rem;
+}
+
+@media only screen and (max-width: 600px) {
+  .body {
+    grid-template-columns: 1fr;
+  }
+  .body > *:nth-child(1) {
+    grid-row: 2;
+    height: 150%;
+  }
+  .body > *:nth-child(3) {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media only screen and (min-width: 601px) and (max-width: 768px) {
+  .body {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(2, 1fr) 0.25fr;
+  }
+  .body > *:nth-child(2) {
+    grid-row: 1;
+  }
+  .form {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .form h3,
+  .form div:nth-child(4),
+  .form button {
+    grid-column: 1/3;
+  }
+
+  .body > *:nth-child(1) {
+    grid-row: 2;
+    grid-column: 1/2;
+  }
 }
