--- a/src/app/styles/services.module.css
+++ b/src/app/styles/services.module.css
@@ -91,3 +91,9 @@
     height: auto;
   }
 }
+@media screen and (max-width: 600px) {
+  .sport_list {
+    display: flex;
+    flex-direction: column;
+  }
+}
