--- a/src/app/styles/accommodation.module.css
+++ b/src/app/styles/accommodation.module.css
@@ -12,6 +12,10 @@
   text-align: center;
   padding: 32px 0px 32px 0px;
 }
+.floor_card > img {
+  width: 100%;
+  height: auto;
+}
 
 .cards {
   display: grid;
@@ -221,7 +225,7 @@
   height: 100%;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 601px) and (max-width: 768px) {
   .cards {
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem;
@@ -263,9 +267,36 @@
     grid-column: 1/4;
   }
 }
-/* for mobile stuff */
-@media only screen and (max-width: 600px) {
+
+@media screen and (max-width: 600px) {
   .cards {
     grid-template-columns: 1fr;
+  }
+  .floor_card {
+    width: 100%;
+    grid-template-columns: 1fr;
+    gap: 0;
+    padding: 1rem;
+  }
+  .floor_card > *:nth-child(2),
+  .floor_card > *:nth-child(4),
+  .floor_card > *:nth-child(5) {
+    grid-row: 1;
+  }
+  .floor_card > *:nth-child(1) {
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    height: auto;
+    grid-column: 1/4;
+    grid-row: 4;
+  }
+  .floor_card > *:nth-child(6) {
+    width: 100%;
+    grid-row: 5;
+    grid-column: 1/4;
+  }
+  .line {
+    display: none;
   }
 }
