--- a/app/styles/home.module.css
+++ b/app/styles/home.module.css
@@ -147,7 +147,7 @@
   .cards,
   .lists {
     height: fit-content;
-    justify-content: start;
+    justify-content: flex-start;
     display: flex;
     flex-direction: column;
   }
